fix for 1888- middle align subway stop

--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -23,8 +23,17 @@
 	}
 
 	#subways{
+		.row{
+			padding: 4px 0px;
+			display: flex;
+			align-items: center;
+		}
 		.distance-and-time{
-			text-align: left
+			text-align: left;
+			p{
+				font-size: 13px;
+				margin: 0px;
+			}
 		}
 	}
 
@@ -64,7 +73,7 @@
 
 		#subways{
 			.distance-and-time{
-				text-align: right
+				text-align: right;
 			}
 		}
 	}
